packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__013_search_core_payload_empty_graph.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 013_search_core_payload_empty_graph [search_core]: Search Core Empty Graph"
expression: result
info:
  id: 013_search_core_payload_empty_graph
  name: Search Core Empty Graph
  category: search_core
  description: Search with empty graph payload handling
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/013_search_core_payload_empty_graph/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "013_search_core_payload_empty_graph",
  "status": "validated"
}
