packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__014_search_core_phrase_specific.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 014_search_core_phrase_specific [search_core]: Search Core Phrase Specific"
expression: result
info:
  id: 014_search_core_phrase_specific
  name: Search Core Phrase Specific
  category: search_core
  description: Phrase-specific search matching
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/014_search_core_phrase_specific/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "014_search_core_phrase_specific",
  "status": "validated"
}
