packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__015_search_core_sort_path.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 015_search_core_sort_path [search_core]: Search Core Sort Path"
expression: result
info:
  id: 015_search_core_sort_path
  name: Search Core Sort Path
  category: search_core
  description: Search results sorted by path
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/015_search_core_sort_path/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "015_search_core_sort_path",
  "status": "validated"
}
