packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__017_agentic_query_narrows_candidates.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 017_agentic_query_narrows_candidates [agentic_expansion]: Agentic Expansion "
expression: result
info:
  id: 017_agentic_query_narrows_candidates
  name: "Agentic Expansion "
  category: agentic_expansion
  description: "Agentic expansion scenario: query_narrows_candidates"
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/017_agentic_query_narrows_candidates/scenario.toml
---
{
  "category": "agentic_expansion",
  "files": [],
  "scenario_id": "017_agentic_query_narrows_candidates",
  "status": "validated"
}
