packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__018_agentic_worker_and_pair_budgets.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 018_agentic_worker_and_pair_budgets [agentic_expansion]: Agentic Expansion "
expression: result
info:
  id: 018_agentic_worker_and_pair_budgets
  name: "Agentic Expansion "
  category: agentic_expansion
  description: "Agentic expansion scenario: worker_and_pair_budgets"
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/018_agentic_worker_and_pair_budgets/scenario.toml
---
{
  "category": "agentic_expansion",
  "files": [],
  "scenario_id": "018_agentic_worker_and_pair_budgets",
  "status": "validated"
}
