packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__020_build_scope_hidden_dirs.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 020_build_scope_hidden_dirs [build_scope]: Build Scope: hidden dirs"
expression: result
info:
  id: 020_build_scope_hidden_dirs
  name: "Build Scope: hidden dirs"
  category: build_scope
  description: build_scope scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/020_build_scope_hidden_dirs/scenario.toml
---
{
  "category": "build_scope",
  "files": [],
  "scenario_id": "020_build_scope_hidden_dirs",
  "status": "validated"
}
