packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__021_build_scope_include_dirs.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 021_build_scope_include_dirs [build_scope]: Build Scope: include dirs"
expression: result
info:
  id: 021_build_scope_include_dirs
  name: "Build Scope: include dirs"
  category: build_scope
  description: build_scope scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/021_build_scope_include_dirs/scenario.toml
---
{
  "category": "build_scope",
  "files": [],
  "scenario_id": "021_build_scope_include_dirs",
  "status": "validated"
}
