packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__022_build_scope_skill_metadata.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 022_build_scope_skill_metadata [build_scope]: Build Scope: skill metadata"
expression: result
info:
  id: 022_build_scope_skill_metadata
  name: "Build Scope: skill metadata"
  category: build_scope
  description: build_scope scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/022_build_scope_skill_metadata/scenario.toml
---
{
  "category": "build_scope",
  "files": [],
  "scenario_id": "022_build_scope_skill_metadata",
  "status": "validated"
}
