packages/rust/crates/xiuxian-wendao/tests/snapshots/scenarios__024_cache_reuses_snapshot.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario.rs
description: "Scenario 024_cache_reuses_snapshot [cache_build]: Cache Build: reuses snapshot"
expression: result
info:
  id: 024_cache_reuses_snapshot
  name: "Cache Build: reuses snapshot"
  category: cache_build
  description: cache_build scenario
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/024_cache_reuses_snapshot/scenario.toml
---
{
  "category": "cache_build",
  "files": [],
  "scenario_id": "024_cache_reuses_snapshot",
  "status": "validated"
}
